# iCell

./: README.md
iCell/: CMakeLists.txt  apply_main.cpp  main.cpp
iCell-build/: CMakeCache.txt  Makefile  cmake_install.cmake  iCell.cbp
